--- a/Programming-Hero-Assignment-1/Code/style.css
+++ b/Programming-Hero-Assignment-1/Code/style.css
@@ -59,3 +59,65 @@ ul {
   text-align: left;
   border-radius: 4px;
 }
+
+/*Hero Section Design*/
+
+.hero-section {
+  text-align: center;
+  padding: 100px 20px;
+  background-image: url(assets/hero-bg.png);
+  width: auto;
+  height: auto;
+  background-repeat: no-repeat;
+}
+
+.white-text {
+  display: inline-block;
+  background: #e6fff3;
+  color: #047857;
+  padding: 6px 12px;
+  border-radius: 20px;
+  font-size: 16px;
+  font-style: Medium;
+  font-weight: 500;
+  letter-spacing: 0%;
+  text-align: center;
+}
+.circle-img {
+  height: 16px;
+  width: 16px;
+}
+h1 {
+  font-size: 40px;
+  margin: 20px 0;
+}
+
+h1 span {
+  color: #22c55e;
+}
+
+.text {
+  max-width: 600px;
+  margin: 0 auto 30px;
+  color: #cbd5e1;
+}
+
+button {
+  padding: 12px 18px;
+  margin: 5px;
+  border-radius: 6px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.btn-green {
+  background: #22c55e;
+  border: none;
+  color: #022c22;
+}
+
+.btn-border {
+  background: transparent;
+  border: 1px solid #475569;
+  color: white;
+}
