--- a/Programming-Hero-Assignment-1/Code/style.css
+++ b/Programming-Hero-Assignment-1/Code/style.css
@@ -36,6 +36,10 @@ ul {
   font-weight: 500;
   letter-spacing: 0%;
 }
+
+ul li:hover {
+  text-shadow: 1px 1px rgb(168, 169, 168);
+}
 .logo {
   height: 60px;
   width: 139px;
@@ -58,6 +62,26 @@ ul {
   text-transform: capitalize;
   text-align: left;
   border-radius: 4px;
+}
+
+button.nav_btn:hover {
+  width: 164px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10;
+  padding: 12px 16px;
+  background-color: #136233;
+  border: none;
+  color: white;
+  font-style: Semi Bold;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: capitalize;
+  text-align: left;
+  border-radius: 4px;
+  box-shadow: 2px 2px Green;
 }
 
 /*Hero Section Design*/
@@ -106,18 +130,140 @@ button {
   padding: 12px 18px;
   margin: 5px;
   border-radius: 6px;
-  font-size: 14px;
   cursor: pointer;
+  font-style: Semi Bold;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+}
+
+button.btn-border:hover {
+  padding: 12px 18px;
+  margin: 5px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-style: Semi Bold;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+  box-shadow: 2px 2px Green;
+}
+
+button.btn-green:hover {
+  padding: 12px 18px;
+  margin: 5px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-style: Semi Bold;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+  box-shadow: 2px 2px rgb(77, 137, 210);
+}
+
+.hero-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
 }
 
 .btn-green {
-  background: #22c55e;
+  background: #2fb667;
   border: none;
-  color: #022c22;
+  color: #ffffff;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  padding: 12px 18px;
+  border-radius: 6px;
+  cursor: pointer;
+  height: 44px;
 }
 
 .btn-border {
   background: transparent;
   border: 1px solid #475569;
   color: white;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  padding: 12px 18px;
+  border-radius: 6px;
+  cursor: pointer;
+  height: 44px;
+}
+
+/*Card Section*/
+.notes-section {
+  padding: 80px 20px;
+  text-align: center;
+}
+
+.notes-section h2 {
+  font-size: 36px;
+  margin-bottom: 10px;
+}
+
+.note-des {
+  color: #64748b;
+  max-width: 700px;
+  margin: 0 auto 50px;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.card {
+  background: #f8fafc;
+  padding: 30px 20px;
+  border-radius: 10px;
+  box-shadow: 10px 10px;
+}
+
+.card:hover {
+  background: #ffffff;
+  cursor: pointer;
+  padding: 30px 20px;
+  border-radius: 10px;
+  box-shadow: 10px 10px #2fb667;
+}
+
+.icon {
+  border-radius: 50%;
+  margin-left: 36%;
+  height: 50px;
+  width: 50px;
+  font-size: 30px;
+  margin-bottom: 15px;
+  background: rgba(249, 85, 85, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.card p {
+  font-size: 14px;
+  color: #475569;
 }
