--- a/Programming-Hero-Assignment-1/Code/style.css
+++ b/Programming-Hero-Assignment-1/Code/style.css
@@ -111,9 +111,10 @@ button.nav_btn:hover {
   height: 16px;
   width: 16px;
 }
-h1 {
+.hero-section h1 {
   font-size: 40px;
   margin: 20px 0;
+  color: #ffffff;
 }
 
 h1 span {
@@ -266,4 +267,73 @@ button.btn-green:hover {
 .card p {
   font-size: 14px;
   color: #475569;
+}
+/*Solution Section*/
+.solution {
+  display: flex;
+  gap: 60px;
+  padding: 60px 40px;
+  max-width: 1300px;
+  margin-left: 140px;
+  align-items: center;
+}
+
+.left {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.circle {
+  width: 260px;
+  height: 260px;
+  border-radius: 50%;
+  border: 3px solid #22c55e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 80px;
+}
+
+.circle {
+  height: 600px;
+  width: 600px;
+}
+.circle img:hover {
+  height: 600px;
+  width: 600px;
+  box-shadow: 5px 5px #64748b;
+}
+.right {
+  width: 700px;
+}
+
+.small-title {
+  color: #22c55e;
+  font-size: 13px;
+  font-style: Medium;
+  margin-bottom: 10px;
+}
+
+.solution h2 {
+  font-size: 48px;
+  margin-bottom: 15px;
+  width: 600px;
+}
+
+.desc {
+  color: #64748b;
+  margin-bottom: 20px;
+}
+
+ul {
+  padding-left: 20px;
+}
+
+li {
+  margin-bottom: 10px;
+}
+
+.bullet-point {
+  margin-top: 40px;
 }
