--- a/Programming-Hero-Assignment-1/Code/style.css
+++ b/Programming-Hero-Assignment-1/Code/style.css
@@ -122,7 +122,7 @@ h1 span {
 }
 
 .text {
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto 30px;
   color: #cbd5e1;
 }
@@ -213,7 +213,7 @@ button.btn-green:hover {
 }
 
 .notes-section h2 {
-  font-size: 36px;
+  font-size: 48px;
   margin-bottom: 10px;
 }
 
@@ -267,6 +267,7 @@ button.btn-green:hover {
 .card p {
   font-size: 14px;
   color: #475569;
+  letter-spacing: 0%;
 }
 /*Solution Section*/
 .solution {
@@ -336,4 +337,133 @@ li {
 
 .bullet-point {
   margin-top: 40px;
+}
+
+/*Get Early Access Section*/
+.getaccess-box {
+  background-color: #f9f7f3;
+  width: 80%;
+  margin: 80px auto;
+  padding: 60px 20px;
+  text-align: center;
+  border-radius: 12px;
+}
+
+.getaccess-box h1 {
+  font-size: 40px;
+  color: #0b1c2d;
+  margin-bottom: 15px;
+}
+
+.subtitle {
+  font-size: 14px;
+  color: #6b7280;
+  margin-bottom: 24px;
+  line-height: 1.6;
+  letter-spacing: 0%;
+}
+
+.getaccess-btn {
+  background: #5fa06a;
+  border: none;
+  color: #ffffff;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  padding: 12px 24px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 16px;
+  font-style: Semi Bold;
+  font-weight: 600;
+}
+
+.getaccess-btn:hover {
+  background-color: #4f8c5a;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.note {
+  margin-top: 10px;
+  font-size: 16px;
+  color: #6b7280;
+}
+
+/* Footer Section */
+.footer {
+  background: linear-gradient(180deg, #041a2f, #031525);
+  color: white;
+  padding: 40px 60px;
+  height: 348px;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1100px;
+  margin-left: 190px;
+}
+
+.footer-logo {
+  width: 139px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  padding-top: 90px;
+}
+
+.tagline {
+  font-size: 12px;
+  color: #cbd5e1;
+  margin-left: 6px;
+}
+
+.footer-social p {
+  margin: 0 0 8px;
+  font-size: 14px;
+  padding-top: 90px;
+  width: 200px;
+}
+
+.icons a {
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+  background: white;
+  color: #041a2f;
+  text-align: center;
+  line-height: 28px;
+  border-radius: 50%;
+  font-size: 14px;
+  text-decoration: none;
+  margin-top: 16px;
+}
+
+a.twitter:hover {
+  background: rgb(145, 143, 143);
+  color: white;
+}
+a.linkdin:hover {
+  background: rgb(67, 179, 243);
+  color: black;
+}
+a.facebook:hover {
+  background: rgb(59, 99, 192);
+  color: white;
+}
+hr {
+  border: none;
+  height: 1px;
+  background-color: #1e3a5f;
+  margin: 80px 0 20px;
+  width: 1390px;
+}
+
+.copyright {
+  text-align: center;
+  font-size: 12px;
+  color: #cbd5e1;
+  margin-top: 30px;
 }
